// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PokerPlayer when no image winnings 1`] = `
Array [
  <th
    scope="row"
  >
    <div
      className="sc-bwzfXH bNgKhd"
    >
      <img
        height="48px"
        src="base64EncodedImage"
        width="48px"
      />
      <div
        className="sc-bdVaJa hniAuI"
      >
        firstName
         
        lastName
      </div>
    </div>
  </th>,
  <td>
    $1.0K
  </td>,
  <td>
    <div
      className="sc-bwzfXH bNgKhd"
    >
      Country Not Available
    </div>
  </td>,
]
`;

exports[`renders PokerPlayer with B winnings 1`] = `
Array [
  <th
    scope="row"
  >
    <div
      className="sc-bwzfXH bNgKhd"
    >
      <img
        height="48px"
        src="base64EncodedImage"
        width="48px"
      />
      <div
        className="sc-bdVaJa hniAuI"
      >
        firstName
         
        lastName
      </div>
    </div>
  </th>,
  <td>
    $1.0B
  </td>,
  <td>
    <div
      className="sc-bwzfXH bNgKhd"
    >
      Country Not Available
    </div>
  </td>,
]
`;

exports[`renders PokerPlayer with K winnings 1`] = `
Array [
  <th
    scope="row"
  >
    <div
      className="sc-bwzfXH bNgKhd"
    >
      <img
        height="48px"
        src="base64EncodedImage"
        width="48px"
      />
      <div
        className="sc-bdVaJa hniAuI"
      >
        firstName
         
        lastName
      </div>
    </div>
  </th>,
  <td>
    $1.0K
  </td>,
  <td>
    <div
      className="sc-bwzfXH bNgKhd"
    >
      Country Not Available
    </div>
  </td>,
]
`;

exports[`renders PokerPlayer with M winnings 1`] = `
Array [
  <th
    scope="row"
  >
    <div
      className="sc-bwzfXH bNgKhd"
    >
      <img
        height="48px"
        src="base64EncodedImage"
        width="48px"
      />
      <div
        className="sc-bdVaJa hniAuI"
      >
        firstName
         
        lastName
      </div>
    </div>
  </th>,
  <td>
    $1.0M
  </td>,
  <td>
    <div
      className="sc-bwzfXH bNgKhd"
    >
      Country Not Available
    </div>
  </td>,
]
`;

exports[`renders without crashing 1`] = `
Array [
  <th
    scope="row"
  >
    <div
      className="sc-bwzfXH bNgKhd"
    >
      <img
        height="48px"
        src="base64EncodedImage"
        width="48px"
      />
      <div
        className="sc-bdVaJa hniAuI"
      >
        firstName
         
        lastName
      </div>
    </div>
  </th>,
  <td>
    $0.0
  </td>,
  <td>
    <div
      className="sc-bwzfXH bNgKhd"
    >
      Country Not Available
    </div>
  </td>,
]
`;
